remove input as state from Solutions + update all days refactor some Solution to Function with custom records, inspired by golang multiple return values first wave of limiting method scope + making parameters final where possible remove path build fxn from Util solution part1 only of Day18, 2022